Kahdeksas versio: - Korjattu bugeja, esim. kirjautuneille ja kirjautumattomille reseptit tulostuivat eri tavoin (virheellisesti kirjautumattomille). - Kategoriaominaisuus viimeistelty. Etusivulla voi nyt filteröidä haluamansa kategorian. - Reseptiä lisätessä/muokatessa, kun klikkaa "Lisää ainesosa" -nappia, niin edellä lisättyjä ainesosia ei poisteta aiemmista kentistä, vaan ne säilyvät näkyvillä. - Lisätty ostoslista-ominaisuuteen yksikkömuunnos-ominaisuus: kun lisää mitä tahansa rkl, tl, l, ml tai cl, niin ne muutetaan desilitroiksi, samoin kuin kilogrammat grammoiksi. Näin ostoslistasta näkee todellisen määrän kaikkia tarvittavia ainesosia. (Ennen tätä esim. 15 dl ja 2 rkl tulostui muotoon 17 dl, nyt muotoon 15.3 dl). PUUTTUU: - Blueprint-rakenne. - Mahdollisuus järjestää viikkosuunnitelma viikonpäivien mukaisesti ma-su. Tämä tehdään, jos jää aikaa.

--- a/app/static/css/appstyle.css
+++ b/app/static/css/appstyle.css
@@ -53,10 +53,10 @@ table {
     display: table;
     clear: both;
 }
+
 table, th, td, tr {
     border: 1px solid black;
     height: fit-content;
-
     }
 
 .item {
@@ -66,15 +66,18 @@ table, th, td, tr {
   float: left;
   margin: 10px auto auto auto;
   height: auto;
+  line-height: normal;
   opacity: 0.8;
+  display: none;
 
 }
 
 h4 {
     margin: 30px;
+
 }
 
-h1, h6 {
+h1, h3, h6 {
     text-align: center;
 }
 
@@ -139,10 +142,15 @@ textarea {
 
 .addingr {
     display: inline-block;
+    float: none;
 }
 
 .addingr label {
     display: block;
+}
+
+label {
+    text-align: left;
 }
 
 .is-danger {
@@ -152,6 +160,25 @@ textarea {
     color: white;
 }
 
-#modButtons, .modifyIngredients, .addingr, #chooseDay {
+#modButtons, .modifyIngredients, .addingr, #moreIngredients, .newIngredients {
     text-align: center;
+}
+
+select {
+    max-width: 100%;
+}
+
+#myBtnContainer {
+    width: 50%;
+    text-align: center;
+}
+
+#selectorContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.show {
+  display: block;
 }
