--- a/app/templates/add_to_plan.html
+++ b/app/templates/add_to_plan.html
@@ -19,7 +19,7 @@
                 <p style="text-align: center">{% for ingredient in recipe['ingredients'] %}
                 {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}<br>
                 {% endfor %}</p><br>
-
+            <p style="font-weight: bold">Valmistusohje:</p>
             <p>{{recipe.description}}</p><br>
 
 
