--- a/application/templates/logged_in.html
+++ b/application/templates/logged_in.html
@@ -8,8 +8,8 @@
 
 <div class="row">
     <div class="flex-sm-column"></div>
-    <div class="flex-lg-column rounded">
-
+    <div class="flex-lg-column rounded" style="align-content: center; opacity: 0.7">
+<br><br><br><br><br>
         <h1 style="align-content: center">Olet nyt kirjautunut sisään, {{ name }}!</h1></div>
     <div class="flex-sm-column"></div>
 </div>
