--- a/application/templates/signup.html
+++ b/application/templates/signup.html
@@ -22,7 +22,7 @@
     <h6>Rekisteröityneenä käyttäjänä voit lisätä, muokata ja poistaa omia reseptejä.
     Lisäksi voit lisätä reseptejä viikkosuunnitelmaan ja tulostaa sen perusteella kootun ostoslistan.</h6><br>
 
-    <h6>Oletko jo rekisteröitynyt? Siirry <a href="{{ url_for('login') }}">kirjautumissivulle!</a></h6>
+    <h6>Oletko jo rekisteröitynyt? Siirry <a href="{{ url_for('auth.login') }}">kirjautumissivulle!</a></h6>
 <form action="" method="post">
     <div class="form-group">
         <label></label>
