--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -15,7 +15,7 @@
     {% endblock %}
 </head>
 <body>    {% block content %}
-<nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: navajowhite;">
+<nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: navajowhite; height: auto">
     <div class="container-fluid"><a class="navbar-brand" href="/"><img src="../static/syomaannew.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -24,14 +24,14 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav" style="font-size: larger">
             {% if not current_user.is_authenticated %}
-            <a class="nav-item nav-link" href="{{ url_for('signup') }}">Rekisteröidy</a>
-            <a class="nav-item nav-link" href="{{ url_for('login') }}">Kirjaudu</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.signup') }}">Rekisteröidy</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Kirjaudu</a>
             {% endif %}
             {% if current_user.is_authenticated %}
-            <a class="nav-item nav-link" href="{{ url_for('profile') }}">Profiili</a>
-            <a class="nav-item nav-link" href="{{ url_for('add_recipe') }}">Lisää resepti</a>
-            <a class="nav-item nav-link" href="{{ url_for('plan') }}">Viikkosuunnitelma</a>
-            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Kirjaudu ulos</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.profile') }}">Profiili</a>
+            <a class="nav-item nav-link" href="{{ url_for('recipe.add_recipe') }}">Lisää resepti</a>
+            <a class="nav-item nav-link" href="{{ url_for('plan.plan') }}">Viikkosuunnitelma</a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a>
             {% endif %}
         </div>
     </div>
