--- a/application/templates/modify.html
+++ b/application/templates/modify.html
@@ -40,7 +40,7 @@
             <div class="addingr"><input type="text" style="width: 60px" class="form-control mod_quantity" id="mod_quantity" name="quantity" value="{{ingredient['quantity']}}" /></div>
             <div class="addingr"><input type="text" style="width: 60px" class="form-control measuring_unit" id="mod_measuring_unit" name="measuring_unit" value="{{ingredient['measuring_unit']}}"/></div>
             <div class="addingr"><input type="text" class="form-control ingredient" style="width: auto" id="mod_ingredient" name="ingredient" value="{{ingredient['ingredient']}}" /></div><br>
-            <a href="{{ url_for('delete_ingredient', quantity=quantity, measuring_unit=measuring_unit, ingredient=ingredient, recipe_name=recipe.recipe_name)}}">Poista tämä ainesosa</a><br><br>
+            <a href="{{ url_for('recipe.delete_ingredient', quantity=quantity, measuring_unit=measuring_unit, ingredient=ingredient, recipe_name=recipe.recipe_name)}}">Poista tämä ainesosa</a><br><br>
             {% endfor %}
 
 </div>
