--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -15,7 +15,7 @@
     {% endblock %}
 </head>
 <body>    {% block content %}
-<nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: navajowhite; height: auto">
+<nav class="navbar navbar-light fixed-top navbar-expand-lg">
     <div class="container-fluid"><a class="navbar-brand" href="/"><img src="../static/syomaannew.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,3 +43,4 @@
 </body>
 
 </html>
+<div class="footer"> Copyright: Ruut Vedenpää-Kun 2022 </div>
