--- a/application/templates/logged_in.html
+++ b/application/templates/logged_in.html
@@ -9,8 +9,8 @@
 <div class="row">
     <div class="flex-sm-column"></div>
     <div class="flex-lg-column rounded" style="align-content: center; opacity: 0.7">
-<br><br><br><br><br>
-        <h1 style="align-content: center">Olet nyt kirjautunut sisään, {{ name }}!</h1></div>
+<br><br>
+        <h1 style="align-content: center">Olet nyt kirjautunut sisään, {{ name }}!</h1><br><br></div>
     <div class="flex-sm-column"></div>
 </div>
 
