Kymmenes ja viimeinen versio: - Ohjelmisto on valmis.

--- a/application/static/css/appstyle.css
+++ b/application/static/css/appstyle.css
@@ -130,7 +130,7 @@ h1, h2, h3, h6 {
     width: 25%;
     float: left;
     margin: 10px;
-    background: white;
+    background: linen;
     height: fit-content;
     opacity: 0.8;
 }
